--- a/index.css
+++ b/index.css
@@ -7,14 +7,29 @@ body{
     font-family: 'Balsamiq Sans', cursive;
     
 }
-.logo{
-    color: #fff;
+.logo1{
+  width: 30px;
+  height: 20px;
+  padding: 0 10px 0 0;
 }
+.logo{
+    color: rgb(7, 6, 6);
+    font-family:  'Times New Roman', Times, serif;
+    font-size: larger;
+
+}
+.nav-item{
+  font-family:  'Times New Roman', Times, serif;
+  
+}
+
 .navbar-custom {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: rgba(7, 7, 7, 0.582);
+  background-color: #ddf8f8;
 }
+        
+
 .hero {
     padding-top: 10.5rem;
     padding-bottom: 6rem;
@@ -63,7 +78,7 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba(254, 209, 54, 0.9);
+    background: rgba(248, 248, 248, 0.9);
     align-items: center;
     justify-content: center;
     opacity: 0;
@@ -75,7 +90,7 @@ body{
     color: white;
   }
   #project .project-item .project-link:hover .project-hover {
-    opacity: 1;
+    opacity: 0.5;
   }
   #project .project-item .project-caption {
     padding: 1.5rem;
@@ -131,71 +146,165 @@ body{
   }
 /*End of Project*/
   /* About section*/
+  h2{
+    text-align: center;
+     padding: 5px;
+  }
   
-.about {
-  padding: 10px 0 0 0;
-}
-
-.about .icon-boxes h3 {
-  font-size: 35px;
-  font-weight: bold;
-  color: #080808;
-  margin-bottom: 15px;
-}
-
-.about .icon-box {
-  margin-top: 40px;
-}
-
-.about .icon-box .icon {
-  float: left;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 64px;
-  height: 64px;
-  border: 2px solid #cc1c05;
-  border-radius: 50px;
-  transition: 0.5s;
-}
-
-.about .icon-box .icon i {
-  color: #cc1c05;
-  font-size: 32px;
-}
-
-.about .icon-box:hover .icon {
-  background: #cc1c05;
-  border-color: #cc1c05
-}
-
-.about .icon-box:hover .icon i {
-  color: #fff;
-}
-
-.about .icon-box .title {
-  margin-left: 85px;
-  font-weight: 700;
-  margin-bottom: 10px;
-  font-size: 18px;
-}
-
-.about .icon-box .title a {
-  color: #343a40;
-  transition: 0.3s;
-}
-
-.about .icon-box .title a:hover {
-  color: #cc1c05;
-}
-
-.about .icon-box .description {
-  margin-left: 85px;
-  line-height: 24px;
-  font-size: 14px;
-}
+  .about .icon-boxes h4 {
+    font-size: 18px;
+    color: #800000;
+    margin-bottom: 15px;
+  }
+  .about .icon-boxes h3 {
+    font-size: 28px;
+    font-weight: 700;
+    color: #2c4964;
+    margin-bottom: 15px;
+  }
+  .about .icon-box {
+    margin-top: 40px;
+  }
+  .about .icon-box .icon {
+    float: left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 64px;
+    height: 64px;
+    border: 2px solid #800000;
+    border-radius: 50px;
+    transition: 0.5s;
+  }
+  .about .icon-box .icon i {
+    color: #1977cc;
+    font-size: 32px;
+  }
+  .about .icon-box:hover .icon {
+    background: #bb6262;
+    border-color: #b36161;
+  }
+  .about .icon-box:hover .icon i {
+    color: #fff;
+  }
+  .about .icon-box .title {
+    margin-left: 85px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    font-size: 18px;
+  }
+  .about .icon-box .title a {
+    color: #343a40;
+    transition: 0.3s;
+  }
+  .about .icon-box .title a:hover {
+    color: #a3381d;
+  }
+  .about .icon-box .description {
+    margin-left: 85px;
+    line-height: 24px;
+    font-size: 14px;
+  }
+  .about .video-box {
+    background: url("img/people.jpeg") center center no-repeat;
+    background-size: cover;
+    min-height: 500px;
+  }
+  .about .play-btn {
+    width: 94px;
+    height: 94px;
+    background: radial-gradient(#e4c6bf 50%, rgba(25, 119, 204, 0.4) 52%);
+    border-radius: 50%;
+    display: block;
+    position: absolute;
+    left: calc(50% - 47px);
+    top: calc(50% - 47px);
+    overflow: hidden;
+  }
+  .about .play-btn::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-40%) translateY(-50%);
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 15px solid #fff;
+    z-index: 100;
+    transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  .about .play-btn::before {
+    content: "";
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
+    -webkit-animation: pulsate-btn 2s;
+    animation: pulsate-btn 2s;
+    -webkit-animation-direction: forwards;
+    animation-direction: forwards;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: steps;
+    animation-timing-function: steps;
+    opacity: 1;
+    border-radius: 50%;
+    border: 5px solid rgba(243, 231, 229, 0.7);
+    top: -15%;
+    left: -15%;
+    background: rgba(198, 16, 0, 0);
+  }
+  .about .play-btn:hover::after {
+    border-left: 15px solid #800000;
+    transform: scale(20);
+  }
+  .about .play-btn:hover::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-40%) translateY(-50%);
+    width: 0;
+    height: 0;
+    border: none;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 15px solid #fff;
+    z-index: 200;
+    -webkit-animation: none;
+    animation: none;
+    border-radius: 0;
+  }
+  
+  @-webkit-keyframes pulsate-btn {
+    0% {
+      transform: scale(0.6, 0.6);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1, 1);
+      opacity: 0;
+    }
+  }
+  
+  @keyframes pulsate-btn {
+    0% {
+      transform: scale(0.6, 0.6);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1, 1);
+      opacity: 0;
+    }
+  }
 
   /* end of About Section*/
+
+  /* login */
+  
   /*Team Section*/
   
 .box
@@ -240,7 +349,7 @@ body{
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	height: 55%;
+	height: 20%;
 	padding: 20px;
 	box-sizing: border-box;
 	text-align: center;
@@ -275,7 +384,7 @@ body{
  .box:hover .content p
 {
 	opacity: 1;
-	transform: translateY(0);
+	transform: translateY(10);
 	transition-delay: 0.7s
 }
  .box:hover .content a
@@ -359,80 +468,10 @@ body{
   border-radius: 50px;
 }
 /*Footer*/
-.social{
-display: flex;
-width: 250px;
-justify-content: space-between;
-list-style: none;
+.copyright{
+  align-content: center;
+  justify-content: center;
 }
-.social .list-item{
-  position: relative;
-  width:60px;
-  height: 60px;
-  border-radius: 50%;
-  background: #fff;
-}
-.social .list-item:after,
-.social .list-item:before{
-  content:"";
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(45deg, red, yellow);
-  border-radius: 50%;
-  z-index: -1;
-  filter: blur(10px);
-  opacity: 0;
-  transition: 1s;
-}
-.social .list-item:after{
-  filter: blur(20px);
-}
-.social .list-item:hover:before,
-.social .list-item:hover:after{
-opacity: 1;
-}
-.social .list-item .list-link{
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  right: 10px;
-  bottom: 10px;
-  text-align: center;
-  line-height: 50px;
-  color: #fff;
-  background: #000;
-  font-size: 28px;
-  border-radius: 50%;
-  transition:2s; 
-}
-.social .list-item .list-link i{
-  text-shadow: 0 2px 5px rgba(0,0,0, .2);
-
-}
-.social .list-item:nth-child(1) a,
-.social .list-item:nth-child(1):before,
-.social .list-item:nth-child(1):after{
-  background: linear-gradient(45deg, #00aeff, #a200ff);
-}
-.social .list-item:nth-child(2) a,
-.social .list-item:nth-child(2):before,
-.social .list-item:nth-child(2):after{
-  background: linear-gradient(45deg, #00a2ff, #ff1e00);
-}
-.social .list-item:nth-child(3) a,
-.social .list-item:nth-child(3):before,
-.social .list-item:nth-child(3):after{
-  background: linear-gradient(45deg,#ff008c, #ce6708);
-}
-.social .list-item:nth-child(4) a,
-.social .list-item:nth-child(4):before,
-.social .list-item:nth-child(4):after{
-  background: linear-gradient(45deg,#0791c7, #f794a5);
-}
-
 
 
 
